--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "html-to-utf8": "^0.1.0",
+    "ramda": "^0.27.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
